--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#462759</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorButtonLogin">#FF7402A1</color>
 </resources>
