--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,7 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 
     <ProgressBar
-        android:id="@+id/progressLogin"
+        android:id="@+id/progress"
         style="?android:attr/progressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
