--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#462759</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorButtonLogin">#FF7402A1</color>
